# examples

./: README
apps/c/escape/: README  meson.build
apps/c/escape/src/: gui_main.c  main.c  maze.c  meson.build
c-cmdline/: meson.build
c-cmdline/src/: cmdline_main.c  meson.build
c-eo-classes/: meson.build
c-eo-classes/src/: example_rectangle.c  example_square.eo  meson.build
c-eo-intro/: meson.build
c-eo-intro/src/: eo_intro_main.c
c-eo-refcount/: meson.build
c-eo-refcount/src/: eo_refcount_main.c
c-gui/: meson.build
c-gui/src/: gui_main.c
c-lib/: meson.build
c-lib/src/: meson.build
c-lib/src/lib/: Example.h  example.c  meson.build
c-lib/src/test/: meson.build  runner.c  test_lib.c
c-lifecycle/: meson.build
c-lifecycle/src/: lifecycle_main.c  meson.build
examples/c/eo-classes/src/: eo_classes_main.c  example_rectangle.eo  example_square.c
examples/c/eo-intro/src/: meson.build
examples/c/eo-refcount/src/: meson.build
examples/c/lib/: meson.build
examples/c/lib/src/lib/: example.c
examples/c/lib/src/test/: meson.build  suite.h
reference/c/core/: meson.build
reference/c/core/src/: core_idler.c  core_io.c  core_loop.c  core_poll.c  meson.build
reference/c/eina/: meson.build
reference/c/eina-iterator/: meson.build
reference/c/eina-iterator/src/: eina_iterator_main.c  meson.build
reference/c/eina/src/: eina_array.c  eina_hash.c  eina_iterator.c  eina_list.c  eina_list_main.c  eina_string.c  eina_value.c  eina_value_custom.c  meson.build
reference/c/net/: meson.build
reference/c/net/src/: meson.build  net_io.c
reference/c/ui/: meson.build
reference/c/ui/src/: meson.build  ui_container.c  ui_sizing.c
tutorial/c/eo-classes/: meson.build
tutorial/c/eo-classes/src/: eo_classes.h  eo_classes_main.c  example_rectangle.c  example_rectangle.eo  example_shape.c  example_shape.eo  example_square.c  meson.build
tutorial/c/eo-inherit/: meson.build
tutorial/c/eo-inherit/src/: eo_inherit.h  eo_inherit_main.c  example_rectangle.c  example_rectangle.eo  example_shape.eo  example_square.c  example_square.eo  meson.build
tutorial/c/eo-intro/: meson.build
tutorial/c/eo-intro/src/: eo_intro_main.c  meson.build
tutorial/c/eo-multiinherit/: meson.build
tutorial/c/eo-multiinherit/src/: eo_inherit_main.c  eo_multiinherit.h  eo_multiinherit_main.c  example_circle.c  example_circle.eo  example_colored.c  example_colored.eo  example_rectangle.c  example_rectangle.eo  example_shape.c  example_shape.eo  example_square.c  example_square.eo  meson.build
tutorial/c/eo-refcount/: meson.build
tutorial/c/eo-refcount/src/: eo_refcount_main.c  meson.build
tutorial/c/hello-cmdline/: meson.build
tutorial/c/hello-cmdline/src/: cmdline_main.c  meson.build
tutorial/c/hello-gui/: meson.build
tutorial/c/hello-gui/src/: gui_main.c  meson.build
tutorial/c/lib/: meson.build
tutorial/c/lib/src/lib/: Example.h  meson.build
tutorial/c/lib/src/test/: meson.build  runner.c  test_lib.c
tutorial/c/lifecycle/: meson.build
tutorial/c/lifecycle/src/: lifecycle_main.c  meson.build
