deps = [eina, efl]

executable('efl_reference_core_loop',
  files(['core_loop.c']),
  dependencies : deps,
  include_directories : inc,
  install : true
)

executable('efl_reference_core_exe',
  files(['core_exe.c']),
  dependencies : deps,
  include_directories : inc,
  install : true
)

executable('efl_reference_core_thread',
  files(['core_thread.c']),
  dependencies : deps,
  include_directories : inc,
  install : true
)
