deps = [eina, efl]

executable('efl_reference_core_loop',
  files(['core_loop.c']),
  dependencies : deps,
  include_directories : inc,
  install : true
)

executable('efl_reference_core_io',
  files(['core_io.c']),
  dependencies : deps,
  include_directories : inc,
  install : true
)

executable('efl_reference_core_idler',
  files(['core_idler.c']),
  dependencies : deps,
  include_directories : inc,
  install : true
)

executable('efl_reference_core_poll',
  files(['core_poll.c']),
  dependencies : deps,
  include_directories : inc,
  install : true
)

