deps = [eina, efl, elm]

executable('efl_reference_eina_array',
  files(['eina_array_main.c']),
  dependencies : deps,
  include_directories : inc,
  install : true
)

executable('efl_reference_eina_list',
  files(['eina_list_main.c']),
  dependencies : deps,
  include_directories : inc,
  install : true
)

executable('efl_reference_eina_iterator',
  files(['eina_iterator_main.c']),
  dependencies : deps,
  include_directories : inc,
  install : true
)

