deps = [eina, efl]

executable('efl_reference_eina_array',
  files(['eina_array.c']),
  dependencies : deps,
  include_directories : inc,
  install : true
)

executable('efl_reference_eina_list',
  files(['eina_list.c']),
  dependencies : deps,
  include_directories : inc,
  install : true
)

executable('efl_reference_eina_iterator',
  files(['eina_iterator.c']),
  dependencies : deps,
  include_directories : inc,
  install : true
)

executable('efl_reference_eina_hash',
  files(['eina_hash.c']),
  dependencies : deps,
  include_directories : inc,
  install : true
)

executable('efl_reference_eina_string',
  files(['eina_string.c']),
  dependencies : deps,
  include_directories : inc,
  install : true
)

executable('efl_reference_eina_value',
  files(['eina_value.c']),
  dependencies : deps,
  include_directories : inc,
  install : true
)

executable('efl_reference_eina_value_custom',
  files(['eina_value_custom.c']),
  dependencies : deps,
  include_directories : inc,
  install : true
)
